# cudatest

./: README.md
src/: CMakeLists.txt  add.cu  add.h  card_manager.cu  card_manager.h  main.cpp
